// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FunctionExpression > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
import { server$ } from 'my-example';
import { value } from "./example.ts?my-example=0.ts";
const outer = () => {
  const example = _$$server( /*@dismantle skip*/async () => {
    const _source = (await import("./example.ts?my-example=2.ts")).default;
    return async function (..._rest) {
      const [_type, _result] = await _$$func(_source, null)([], ..._rest);
      return _result;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=2.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export const value = 'foo bar';",
      "map": {
        "file": undefined,
        "mappings": "aAEYA,KAAK,GAAG,SAAS",
        "names": [
          "value",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "export default (function ([]) {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "8BAI4C;EAAA;IAAA,WAC3BA,KAAK;EAAA,SAAAC,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AACd,CAAC",
        "names": [
          "value",
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=2.ts" => {
      "code": "import { registerServerFunction as _entry } from "my-example/server";
export default _entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AAAC,SAAAC,KAAA;AAErC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,GAAAC,SAAA;IAAA,MAAAC,OAAA,kDAAAC,OAAA;IAAA,0BAAAC,KAAA;MAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,eAAAE,KAAA;MAAA,OAAAE,OAAA;IAAA;EAAA,EAEX;AACJ,CAAC",
    "names": [
      "server$",
      "value",
      "outer",
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const value = 'foo bar';
      const outer = () => {
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=1.ts",
  ],
}
`;

exports[`FunctionExpression > client > should transform valid server functions 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
import { server$ } from 'my-example';
const example = _$$server( /*@dismantle skip*/async () => {
  const _source = (await import("./example.ts?my-example=1.ts")).default;
  return async function (..._rest) {
    const [_type, _result] = await _$$func(_source, null)([], ..._rest);
    return _result;
  };
});",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function ([]) {
  try {
    return [2, 'foo bar'];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "8BAE0C;EAAA;IAAA,WAC3B,SAAS;EAAA,SAAAA,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AAClB,CAAC",
        "names": [
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as _entry } from "my-example/server";
export default _entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,OAAO,GAAAC,SAAA;EAAA,MAAAC,OAAA,kDAAAC,OAAA;EAAA,0BAAAC,KAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,eAAAE,KAAA;IAAA,OAAAE,OAAA;EAAA;AAAA,EAEX",
    "names": [
      "server$",
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const example = server$(function () {
        return 'foo bar';
      });
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`FunctionExpression > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
import { server$ } from 'my-example';
const outer = () => {
  const value = 'foo bar';
  const example = _$$server( /*@dismantle skip*/async () => {
    const _source = (await import("./example.ts?my-example=1.ts")).default;
    return async function (..._rest) {
      const [_type, _result] = await _$$func(_source, null)([value], ..._rest);
      return _result;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function ([value]) {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "2BAGcA,KAAK,GACyB;EAAA;IAAA,WAC3BA,KAAK;EAAA,SAAAC,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AACd,CAAC",
        "names": [
          "value",
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as _entry } from "my-example/server";
export default _entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,GAAAC,SAAA;IAAA,MAAAC,OAAA,kDAAAC,OAAA;IAAA,0BAAAC,KAAA;MAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,SADPH,KAAK,MAAAK,KAAA;MAAA,OAAAE,OAAA;IAAA;EAAA,EAGT;AACJ,CAAC",
    "names": [
      "server$",
      "outer",
      "value",
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const outer = () => {
        const value = 'foo bar';
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`FunctionExpression > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
import { server$ } from 'my-example';
import { value } from "./example.ts?my-example=0.ts";
const outer = () => {
  const example = _$$server( /*@dismantle skip*/async () => {
    const _source = (await import("./example.ts?my-example=2.ts")).default;
    return async function (..._rest) {
      const [_type, _result] = await _$$func(_source, null)([], ..._rest);
      return _result;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=2.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export const value = 'foo bar';",
      "map": {
        "file": undefined,
        "mappings": "aAEYA,KAAK,GAAG,SAAS",
        "names": [
          "value",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { value } from "./example.ts?my-example=0.ts";
export default (function ([]) {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": ";8BAI4C;EAAA;IAAA,WAC3BA,KAAK;EAAA,SAAAC,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AACd,CAAC",
        "names": [
          "value",
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=2.ts" => {
      "code": "import { registerServerFunction as _entry } from "my-example/server";
import _root from "./example.ts?my-example=1.ts";
export default _entry("26ecc3a5-0-example", _root);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AAAC,SAAAC,KAAA;AAErC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,GAAAC,SAAA;IAAA,MAAAC,OAAA,kDAAAC,OAAA;IAAA,0BAAAC,KAAA;MAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,eAAAE,KAAA;MAAA,OAAAE,OAAA;IAAA;EAAA,EAEX;AACJ,CAAC",
    "names": [
      "server$",
      "value",
      "outer",
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const value = 'foo bar';
      const outer = () => {
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=1.ts",
  ],
}
`;

exports[`FunctionExpression > server > should transform valid server functions 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
import { server$ } from 'my-example';
const example = _$$server( /*@dismantle skip*/async () => {
  const _source = (await import("./example.ts?my-example=1.ts")).default;
  return async function (..._rest) {
    const [_type, _result] = await _$$func(_source, null)([], ..._rest);
    return _result;
  };
});",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function ([]) {
  try {
    return [2, 'foo bar'];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "8BAE0C;EAAA;IAAA,WAC3B,SAAS;EAAA,SAAAA,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AAClB,CAAC",
        "names": [
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as _entry } from "my-example/server";
import _root from "./example.ts?my-example=0.ts";
export default _entry("26ecc3a5-0-example", _root);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,OAAO,GAAAC,SAAA;EAAA,MAAAC,OAAA,kDAAAC,OAAA;EAAA,0BAAAC,KAAA;IAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,eAAAE,KAAA;IAAA,OAAAE,OAAA;EAAA;AAAA,EAEX",
    "names": [
      "server$",
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const example = server$(function () {
        return 'foo bar';
      });
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;

exports[`FunctionExpression > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$server as _$$server } from "my-example/server";
import { $$func as _$$func } from "dismantle/runtime";
import { server$ } from 'my-example';
const outer = () => {
  const value = 'foo bar';
  const example = _$$server( /*@dismantle skip*/async () => {
    const _source = (await import("./example.ts?my-example=1.ts")).default;
    return async function (..._rest) {
      const [_type, _result] = await _$$func(_source, null)([value], ..._rest);
      return _result;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?my-example=0.ts" => {
      "code": "export default (function ([value]) {
  try {
    return [2, value];
  } catch (_error) {
    return [4, _error];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "mappings": "2BAGcA,KAAK,GACyB;EAAA;IAAA,WAC3BA,KAAK;EAAA,SAAAC,MAAA;IAAA,WAAAA,MAAA;EAAA;EAAA;AACd,CAAC",
        "names": [
          "value",
          "_error",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?my-example=1.ts" => {
      "code": "import { registerServerFunction as _entry } from "my-example/server";
import _root from "./example.ts?my-example=0.ts";
export default _entry("26ecc3a5-0-example", _root);",
      "map": {
        "file": undefined,
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "mappings": ";;AACM,SAASA,OAAO,QAAQ,YAAY;AACpC,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,GAAAC,SAAA;IAAA,MAAAC,OAAA,kDAAAC,OAAA;IAAA,0BAAAC,KAAA;MAAA,OAAAC,KAAA,EAAAC,OAAA,UAAAC,OAAA,CAAAL,OAAA,SADPH,KAAK,MAAAK,KAAA;MAAA,OAAAE,OAAA;IAAA;EAAA,EAGT;AACJ,CAAC",
    "names": [
      "server$",
      "outer",
      "value",
      "example",
      "_$$server",
      "_source",
      "default",
      "_rest",
      "_type",
      "_result",
      "_$$func",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      import { server$ } from 'my-example';
      const outer = () => {
        const value = 'foo bar';
        const example = server$(function () {
          return value;
        });
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?my-example=0.ts",
  ],
}
`;
